--- a/server/views/index.html
+++ b/server/views/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="/assets/css/index.css"></link>
+		<link rel="stylesheet" type="text/css" href="/assets/css/velocity/flip-flap.css"></link>
+		<link rel="stylesheet" type="text/css" href="/assets/css/react-motion/spring.css"></link>
 		<title>{{title}}</title>
 	</head><body role="document">
 
