--- a/public/assets/css/pop-motion/tween.css
+++ b/public/assets/css/pop-motion/tween.css
@@ -1,5 +1,35 @@
 
-.tween p {
-  color: #000;
-  margin: 1em 1em 1em 2em;
+.tween {
+  position: relative;
+  width: 600px;
+  height: 200px;
+}
+
+.tween .animate,
+.tween .content {
+  width: 200px;
+  height: 200px;
+}
+
+.tween .animate {
+  position: absolute;
+  background-color: rgb(63, 131, 183);
+  z-index: 1;
+}
+
+.tween .content {
+  position: absolute;
+  background-color: rgb(37, 81, 117);
+  z-index: 0;
+}
+
+.tween .animate p,
+.tween .content p {
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
